operator/test/chainsaw/tamoss-operational-behaviour/ingress-tls-renders-cert-manager-contract/assert/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tamoss-api
  annotations:
    cert-manager.io/cluster-issuer: tamoss-selfsigned
(spec.ingressClassName): traefik
(spec.tls[0].secretName): tamoss-localtest-tls
(spec.tls[0].hosts[0]): api.tamoss.test
(spec.rules[0].host): api.tamoss.test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tamoss-ui
  annotations:
    cert-manager.io/cluster-issuer: tamoss-selfsigned
(spec.ingressClassName): traefik
(spec.tls[0].secretName): tamoss-localtest-tls
(spec.tls[0].hosts[1]): app.tamoss.test
(spec.rules[0].host): app.tamoss.test
