operator/test/chainsaw/tamoss-operational-behaviour/ingress-tls-renders-cert-manager-contract/resources/tamoss-ingress-tls.yaml
apiVersion: tamoss.livewyer.io/v1alpha1
kind: Tamoss
metadata:
  name: tamoss
  annotations:
    confirmation.tamoss.livewyer.io/deletion: "true"
spec:
  fullnameOverride: tamoss
  auth:
    required: false
  api:
    enabled: true
    replicaCount: 0
  ui:
    enabled: true
    replicaCount: 0
  backends:
    db:
      providedBy: external
      external:
        host: postgresql
        port: "5432"
        database: tams
        auth:
          existingSecret: tams-postgresql-auth
          secretKeys:
            username: username
            password: password
    s3:
      providedBy: external
      external:
        endpoint:
          default:
            url: http://rustfs-svc:9000
        region: us-east-1
        bucket: tamoss
        auth:
          existingSecret: tams-rustfs-auth
          secretKeys:
            accessKey: RUSTFS_ACCESS_KEY
            secretKey: RUSTFS_SECRET_KEY
  ingress:
    enabled: true
    className: traefik
    annotations:
      cert-manager.io/cluster-issuer: tamoss-selfsigned
    tls:
      - secretName: tamoss-localtest-tls
        hosts:
          - api.tamoss.test
          - app.tamoss.test
    api:
      host: api.tamoss.test
    ui:
      web:
        host: app.tamoss.test
  httpRoute:
    enabled: false
